# esm-cpp

./: .gitignore  CLAUDE.md  CMakeLists.txt  LICENSE  README.md  SPEC.md  pyproject.toml  research-report.md
.github/workflows/: ci.yml  wheels.yml
bench/: CMakeLists.txt  bench_gemm.cpp
benchmarks/data/: synthetic_varlen_v1.fasta  synthetic_varlen_v1.fasta.manifest.json
benchmarks/results/: c3_150M_checkpoint_alpha.json  c3_150M_final.json  c3_150M_v3.json  c3_150M_varlen_v1.json  c3_650M_checkpoint_alpha.json  c3_650M_final.json  c3_650M_tier2_bf16.json  c3_650M_tier2_both.json  c3_650M_tier2_default.json  c3_650M_tier2_lmhead.json  c3_650M_v3.json  c3_650M_v4_postS3_t11.json  c3_650M_v4_postS3_t22.json  c3_650M_v4_postS4.json  c3_650M_varlen_v1.json  c3_650M_varlen_v1_both.json  c3_8M_checkpoint_alpha.json  c3_8M_final.json  c3_8M_v3.json  c3_8M_varlen_v1.json  dev_m3_pro_150m_p11_pppl.json  dev_m3_pro_150m_p11_t9_quality.json  dev_m3_pro_35m_neon_full.json  dev_m3_pro_35m_neon_sdot.json  dev_m3_pro_35m_neon_varlen.json  dev_m3_pro_650m_int8_quality.json  dev_m3_pro_650m_neon_uniform.json  dev_m3_pro_650m_neon_uniform_p9.json  dev_m3_pro_650m_neon_varlen.json  dev_m3_pro_650m_p10_baseline_uniform.json  dev_m3_pro_650m_p10_t10_quality.json  dev_m3_pro_650m_p10_t1_measurement.json  dev_m3_pro_650m_p10_t6_attention_pv.json  dev_m3_pro_650m_p10_t8_sdot_hoist.json  dev_m3_pro_650m_p11_t1_baseline.json  dev_m3_pro_650m_p11_t7_amx_e2e.json  dev_m3_pro_650m_p11_t9_quality.json  dev_m3_pro_650m_whole_graph_v1.json  dev_m3_pro_8m_neon.json  dev_m3_pro_8m_neon_full.json  (+14 more)
cmake/: artifact_trace_sha.h.in
docs/: architecture.md  benchmarks.md  maintainer.md  quant-recipe.md
include/esm_cpp/: apple_amx.h  apple_ane.h  apple_whole_graph.h  artifact_cache.h  batch.h  cpu_features.h  io.h  kernels.h  model.h  observer.h  profile.h  quant.h  scheduler.h  smoothquant.h  status.h  thread_pool.h  tokenizer.h  version.h  workspace.h
notes/: phase0.md  phase13_t3_bench.json  phase13_t7_150m.json  phase13_t7_650m.json  phase13_t7_8m.json
python/esm_cpp/: __init__.py  _core.cpp  _core.pyi  alpha_sweep.py  convert.py  fetch_artifacts.py  quantize.py
python/esm_cpp/bench/: compare.py
python/esm_cpp/eval/: pppl.py  proteingym.py
src/: apple_amx.cpp  apple_ane.mm  apple_ane_stub.cpp  apple_whole_graph.mm  apple_whole_graph_stub.cpp  artifact_cache.cpp  batch.cpp  model.cpp  profile.cpp  status.cpp  tokenizer.cpp
src/io/: gguf.cpp  safetensors.cpp
src/kernels/: attention.cpp  cpu_features.cpp  dispatch.cpp  gelu.cpp  gemm_amx.cpp  gemm_fp32.cpp  gemm_i8mm.cpp  gemm_int8.cpp  layernorm.cpp  residual.cpp  rope.cpp  rope_tables.cpp  simd_neon.h
src/quant/: observer.cpp  pack.cpp  smoothquant.cpp
src/sched/: scheduler.cpp
src/threading/: thread_pool.cpp
tasks/: plan.md  todo.md
tests/cpp/: CMakeLists.txt  test_act_quant.cpp  test_apple_amx_model.cpp  test_apple_ane_model.cpp  test_artifact_cache.cpp  test_attention_varlen.cpp  test_batch.cpp  test_cpu_features.cpp  test_dispatch.cpp  test_gemm_shapes.cpp  test_gguf.cpp  test_kernels.cpp  test_observer.cpp  test_quant.cpp  test_scheduler.cpp  test_smoke.cpp  test_smoothquant.cpp  test_thread_pool.cpp  test_tokenizer.cpp  test_whole_graph_model.cpp  test_workspace.cpp
tests/golden/esm2_t12_35M/: manifest.json
tests/golden/esm2_t6_8M/: manifest.json
tests/python/: test_against_hf.py  test_arena.py  test_auto_load_apple.py  test_bench_compare.py  test_escapes.py  test_fetch_artifacts.py  test_forward_batch.py  test_forward_packed.py  test_forward_scheduled.py  test_gguf.py  test_gguf_quantized.py  test_int8_pppl.py  test_observer.py  test_pppl.py  test_proteingym.py  test_smoke.py  test_smoothquant.py  test_tokenizer.py
tools/: _artifact_manifest.py  bench_linux_arm.sh  bench_whole_graph_coreml_predict.py  bench_whole_graph_cpp.cpp  build_amx_artifacts.py  build_whole_graph_artifacts.py  capture_golden.py  check_logit_quality.py  check_whole_graph_quality.py  cibw_smoke_test.py  esm_traceable.py  fetch_oas_antibodies.py  make_synthetic_varlen.py  publish_apple_artifacts.py  render_benchmark_table.py  run_pppl_drift.py  spike_ane_characterize.py  spike_bnns_graph_execute.cpp  spike_bnns_int8.py  spike_fp16_mlmodelc_gen.py  spike_whole_graph_smoke.py
