[build-system]
requires = ["scikit-build-core>=0.10", "pybind11>=2.13"]
build-backend = "scikit_build_core.build"

[project]
name = "esm-cpp"
version = "0.2.0"
description = "CPU-first C++ inference engine for ESM-2 protein language models"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Apache-2.0" }
authors = [{ name = "Ayan Goel", email = "ayangoel91@gmail.com" }]
keywords = [
  "esm-2",
  "esm",
  "protein",
  "protein-language-model",
  "plm",
  "inference",
  "cpu",
  "quantization",
  "int8",
  "bioinformatics",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: POSIX :: Linux",
  "Operating System :: MacOS :: MacOS X",
  "Programming Language :: C++",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
  "numpy>=1.24,<2",
]

[project.urls]
Homepage = "https://github.com/ayan-goel/esm-cpp"
Repository = "https://github.com/ayan-goel/esm-cpp"
Issues = "https://github.com/ayan-goel/esm-cpp/issues"

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "torch>=2.2",
  # HF transformers pin for golden capture; bump in lockstep with regenerated goldens.
  "transformers>=4.49,<5",
  "safetensors>=0.4",
  "ruff",
  "mypy",
  "pybind11>=2.13",
]

[project.scripts]
esm-cpp-convert = "esm_cpp.convert:main"
esm-cpp-quantize = "esm_cpp.quantize:main"
esm-cpp-pppl = "esm_cpp.eval.pppl:main"
esm-cpp-bench = "esm_cpp.bench.compare:main"
esm-cpp-fetch-artifacts = "esm_cpp.fetch_artifacts:main"

[tool.scikit-build]
cmake.version = ">=3.20"
cmake.args = ["-DESM_BUILD_PYTHON=ON", "-DESM_BUILD_TESTS=OFF"]
build-dir = "build/{wheel_tag}"
wheel.packages = ["python/esm_cpp"]
minimum-version = "build-system.requires"

[tool.cibuildwheel]
build = "cp39-* cp310-* cp311-* cp312-* cp313-*"
skip = [
  "pp*",            # no PyPy
  "*-musllinux*",   # glibc only for now
  "*i686*",         # no 32-bit
  "*win32*",        # no 32-bit windows (we don't build windows anyway)
  "*-win_*",        # skip windows entirely until a windows target exists
]
build-verbosity = 1
# Smoke test: see tools/cibw_smoke_test.py. Runs in cibuildwheel's quarantined
# env, no weights or extra deps required. {project} is the source tree root
# cibuildwheel substitutes at run time.
test-command = "python {project}/tools/cibw_smoke_test.py"

[tool.cibuildwheel.linux]
archs = ["auto"]
# manylinux_2_28 ships with GCC 12+ (we need C++20). Covers RHEL 8.6+, Debian 11+,
# Ubuntu 20.04+, Fedora 34+ — the realistic install base.
manylinux-x86_64-image = "manylinux_2_28"
manylinux-aarch64-image = "manylinux_2_28"

[tool.cibuildwheel.macos]
archs = ["arm64"]
# Min target tracks the oldest Apple Silicon macOS; 11.0 (Big Sur) is when arm64 shipped.
environment = { MACOSX_DEPLOYMENT_TARGET = "11.0" }

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "RUF"]

[tool.mypy]
python_version = "3.9"
strict = true
files = ["python/esm_cpp"]
