add_executable(esm_cpp_tests
  test_smoke.cpp
  test_tokenizer.cpp
  test_kernels.cpp
  test_cpu_features.cpp
  test_dispatch.cpp
  test_workspace.cpp
  test_gemm_shapes.cpp
  test_attention_varlen.cpp
  test_thread_pool.cpp
  test_quant.cpp
  test_observer.cpp
  test_smoothquant.cpp
  test_act_quant.cpp
  test_batch.cpp
  test_scheduler.cpp
  test_gguf.cpp
  test_apple_amx_model.cpp
  test_apple_ane_model.cpp
  test_whole_graph_model.cpp
  test_artifact_cache.cpp
)
target_link_libraries(esm_cpp_tests PRIVATE
  esm_cpp_core
  GTest::gtest_main
  esm_warnings)

include(GoogleTest)
gtest_discover_tests(esm_cpp_tests)
